@@ -3,6 +3,12 @@
 	* regcomp.c (parse_dup_op): Remove RE_TOKEN_INIT_BUG code (change of
 	Feb 19 2005) since it's no longer needed.
 
+	* regcomp.c (re_fastmap_iter): Undo addition of volatile from
+	Jan 18 2007; no longer needed and is one less change to have to
+	maintain aginst the upstream.
+
+	* regcomp.c, regex.h, regex_internal.h: Sync with GLIBC.
+
 2013-08-20         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* nonposix.h: New file. Contains FAKE_FD_VALUE.
